@@ -130,6 +130,10 @@ var audio_alert_played;
 
 var admin_iframe_load;
 
+var range_inputs;
+
+var range_sections;
+
 var iframe_font_val;
 
 var iframe_height_adjuster;
