@@ -108,6 +108,54 @@ button, input[type=submit], input[type=button], .force_button_style {
   border-radius: 6px !important;
 }
 
+input[type=range] {
+display: inline;
+  -webkit-appearance: none;
+  margin-top: 1.5em;
+  min-width: 70%;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+input[type=range]:focus {
+  outline: none;
+}
+/***** Chrome, Safari, Opera, and Edge Chromium *****/
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 0.55em;
+  cursor: pointer;
+  animate: 0.2s;
+  border-radius: 1.5em;
+}
+/******** Firefox ********/
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 0.90em;
+  cursor: pointer;
+  animate: 0.2s;
+  border-radius: 1.5em;
+}
+input[type=range]::-webkit-slider-thumb {
+  height: 1.5em;
+  width: 1.5em;
+  border-radius: 50%;
+  box-shadow: 0 0 0.4em 0 rgba(0,0,0, 1);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -0.55em;
+}
+input[type=range]::-moz-range-thumb {
+  height: 1.5em;
+  width: 1.5em;
+  border-radius: 50%;
+  box-shadow: 0 0 0.4em 0 rgba(0,0,0, 1);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -0.55em;
+}
+
 
 fieldset {
     width: auto;
@@ -147,6 +195,63 @@ margin: 0px;
 /* //////////////////////////////
 CLASSES
 ////////////////////////////// */
+
+
+.range-wrap{
+  font-weight: bold;
+  min-width: 100%;
+  position: relative;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+.range-tooltip{
+  position: absolute;
+  top: -3.2em;
+}
+.range-tooltip span{
+  margin-left: 0.6em;
+  min-width: 2em;
+  width: auto;
+  height: 2em;
+  line-height: 2em;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
+  text-align: center;
+  background: #F7931A;
+  color: #fff;
+  font-size: 1.5em;
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  border-radius: 0.5em;
+}
+.range-tooltip span:before{
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 1em solid #F7931A;
+  border-left: 0.5em solid transparent;
+  border-right: 0.5em solid transparent;
+  top: 100%;
+  left: 50%;
+  margin-left: -0.5em;
+  margin-top: -0.1em;
+}
+.range-min, .range-max{
+display: inline;
+  min-width: 15%;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+.range-value {
+position: absolute;
+width: 100%;
+text-align: center;
+}
 
 
 .page_title {
@@ -457,6 +562,11 @@ color: #ffb83f !important;
 }
 
 
+.light_sea_green {
+color: lightseagreen;
+}
+
+
 .bitcoin, .btc, #sidebar ul.list-unstyled li a.bitcoin:link {
 color: #F7931A !important;
 }
@@ -660,16 +770,29 @@ text-decoration: underline !important;
 
 
 .pretty_text_fields {
+min-width: 500px;
+max-width: 95%;
 text-align: right;
 width: fit-content;
 margin: auto;
-margin-left: 0px;
+margin-left: 1.5em;
 }
 
-.pretty_text_fields p {
+.pretty_text_fields p, .pretty_text_fields .admin_range_fields {
 white-space: nowrap;
 margin-top: 1.0em;
 margin-bottom: 2.0em;
+}
+
+.admin_range_fields {
+min-width: 500px;
+max-width: 100%;
+}
+
+.admin_range_fields .setting_title {
+position: absolute;
+padding-left: 1em;
+font-weight: bold;
 }
 
 
